MFC/AXL(Library)/C, C++/AXDev.h

    //Set move velocity profile mode of specific coordinate system. 
    // (caution : Available to use only after axis mapping)
    //ProfileMode : '0' - symmetry Trapezoid
    //              '1' - asymmetric Trapezoid
    //              '2' - symmetry Quasi-S Curve
    //              '3' - symmetry S Curve
    //              '4' - asymmetric S Curve
    DWORD    __stdcall AxmContiSetProfileMode(long lCoord, DWORD uProfileMode);
    // Return move velocity profile mode of specific coordinate system.
    DWORD    __stdcall AxmContiGetProfileMode(long lCoord, DWORD *upProfileMode);
    //========== Reading group for input interrupt occurrence flag
    // Reading the interrupt occurrence state by bit unit in specified input contact module and Offset position of Interrupt Flag Register
    DWORD    __stdcall AxdiInterruptFlagReadBit(long lModuleNo, long lOffset, DWORD *upValue);
    // Reading the interrupt occurrence state by byte unit in specified input contact module and Offset position of Interrupt Flag Register
    DWORD    __stdcall AxdiInterruptFlagReadByte(long lModuleNo, long lOffset, DWORD *upValue);
    // Reading the interrupt occurrence state by word unit in specified input contact module and Offset position of Interrupt Flag Register
    DWORD    __stdcall AxdiInterruptFlagReadWord(long lModuleNo, long lOffset, DWORD *upValue);
    // Reading the interrupt occurrence state by double word unit in specified input contact module and Offset position of Interrupt Flag Register
    DWORD    __stdcall AxdiInterruptFlagReadDword(long lModuleNo, long lOffset, DWORD *upValue);
    // Reading the interrupt occurrence state by bit unit in entire input contact module and Offset position of Interrupt Flag Register
    DWORD    __stdcall AxdiInterruptFlagRead(long lOffset, DWORD *upValue);
    //========= API related log ==========================================================================================   
    // This API sets or resets in order to monitor the API execution result of set axis in EzSpy. 
    // uUse : use or not use => DISABLE(0), ENABLE(1)
    DWORD    __stdcall AxmLogSetAxis(long lAxisNo, DWORD uUse);
    
    // This API verifies if the API execution result of set axis is monitored in EzSpy. 
    DWORD    __stdcall AxmLogGetAxis(long lAxisNo, DWORD *upUse);
    //==Log
    // Set whether execute log output on EzSpy of specified module
    DWORD    __stdcall AxdLogSetModule(long lModuleNo, DWORD uUse);
    // Verify whether execute log output on EzSpy of specified module
    DWORD    __stdcall AxdLogGetModule(long lModuleNo, DWORD *upUse);
    // Set whether to log output to EzSpy of specified input channel
    DWORD    __stdcall AxaiLogSetChannel(long lChannelNo, DWORD uUse);
    // Verify whether to log output to EzSpy of specified input channel
    DWORD    __stdcall AxaiLogGetChannel(long lChannelNo, DWORD *upUse);
    
    // Set whether to log output in EzSpy of specified output channel
    DWORD    __stdcall AxaoLogSetChannel(long lChannelNo, DWORD uUse);
    // Verify whether log output is done in EzSpy of specified output channel.
    DWORD    __stdcall AxaoLogGetChannel(long lChannelNo, DWORD *upUse);
    
    // Verify whether to firmware version designated RTEX board.
    DWORD    __stdcall AxlGetFirmwareVersion(long lBoardNo, PTCHAR szVersion);
    // Sent to firmware designated board.
    DWORD    __stdcall AxlSetFirmwareCopy(long lBoardNo, WORD *wData, WORD *wCmdData);
    // Execute Firmware update to designated board. 
    DWORD    __stdcall AxlSetFirmwareUpdate(long lBoardNo);
    // Verify whether currently RTEX status Initialized.
    DWORD    __stdcall AxlCheckStatus(long lBoardNo, DWORD* dwStatus);
    // To Initialized currently RTEX on designated board.
    DWORD    __stdcall AxlInitRtex(long lBoardNo, DWORD dwOption);
    // Execute universal command designated axis of board.
    DWORD    __stdcall AxlRtexUniversalCmd(long lBoardNo, WORD wCmd, WORD wOffset, WORD *wData);
    // Execute RTEX communication command designated axis.
    DWORD    __stdcall AxmRtexSlaveCmd(long lAxisNo, DWORD dwCmdCode, DWORD dwTypeCode, DWORD dwIndexCode, DWORD dwCmdConfigure, DWORD dwValue);
    // Verify whether Result of RTEX communication command designated axis.
    DWORD    __stdcall AxmRtexGetSlaveCmdResult(long lAxisNo, DWORD* dwIndex, DWORD *dwValue);
    // Verify whether RTEX status information designated axis.
    DWORD    __stdcall AxmRtexGetAxisStatus(long lAxisNo, DWORD *dwStatus);
    // Verify whether RTEX communication return information designated axis.(Actual position, Velocity, Torque)
    DWORD    __stdcall AxmRtexGetAxisReturnData(long lAxisNo,  DWORD *dwReturn1, DWORD *dwReturn2, DWORD *dwReturn3);
    // Verify whether currently status information of RTEX slave axis.(mechanical, Inposition and etc)
    DWORD    __stdcall AxmRtexGetAxisSlaveStatus(long lAxisNo,  DWORD *dwStatus);
    DWORD    __stdcall AxmSetAxisCmd(long lAxisNo, DWORD* tagCommand);
    DWORD    __stdcall AxmGetAxisCmdResult(long lAxisNo, DWORD* tagCommand);
    DWORD    __stdcall AxlGetDpRamData(long lBoardNo, WORD wAddress, DWORD* dwpRdData);
    DWORD    __stdcall AxlBoardReadDpramWord(long lBoardNo, WORD wOffset, DWORD* dwpRdData);
    DWORD    __stdcall AxlSetSendBoardCommand(long lBoardNo, DWORD dwCommand, DWORD* dwpSendData, DWORD dwLength);
    DWORD    __stdcall AxlGetResponseBoardCommand(long lBoardNo, DWORD* dwpReadData);
    DWORD    __stdcall AxmInfoGetFirmwareVersion(long lAxisNo, unsigned char* ucaFirmwareVersion);
    DWORD    __stdcall AxaInfoGetFirmwareVersion(long lModuleNo, unsigned char* ucaFirmwareVersion);
    DWORD    __stdcall AxdInfoGetFirmwareVersion(long lModuleNo, unsigned char* ucaFirmwareVersion);
    //======== Only for PCI-R1604-MLII =========================================================================== 
	DWORD    __stdcall AxmSetTorqFeedForward(long lAxisNo, DWORD dwTorqFeedForward);
	DWORD    __stdcall AxmGetTorqFeedForward(long lAxisNo, DWORD* dwpTorqFeedForward);
	DWORD    __stdcall AxmSetVelocityFeedForward(long lAxisNo, DWORD dwVelocityFeedForward);
	DWORD    __stdcall AxmGetVelocityFeedForward(long lAxisNo, DWORD* dwpVelocityFeedForward);
    // Set Encoder type.
    // Default value : 0(TYPE_INCREMENTAL)
    // Setting range : 0 ~ 1
    // dwEncoderType : 0(TYPE_INCREMENTAL), 1(TYPE_ABSOLUTE).
    DWORD   __stdcall AxmSignalSetEncoderType(long lAxisNo, DWORD dwEncoderType);
    // Verify Encoder type.
    DWORD   __stdcall AxmSignalGetEncoderType(long lAxisNo, DWORD* dwpEncoderType);
    // For updating the slave firmware(only for RTEX-PM).
    //DWORD   __stdcall AxmSetSendAxisCommand(long lAxisNo, WORD wCommand, WORD* wpSendData, WORD wLength);

    //======== Only for PCI-R1604-RTEX, RTEX-PM============================================================== 
	// When Input Universal Input 2, 3, Set Jog move velocity
	// Set only once execute after all drive setting (Ex, PulseOutMethod, MoveUnitPerPulse etc..)
	DWORD    __stdcall AxmMotSetUserMotion(long lAxisNo, double dVelocity, double dAccel, double dDecel);
	// When Input Universal Input 2, 3, Set Jog move usage
	// Setting value :  0(DISABLE), 1(ENABLE)
	DWORD    __stdcall AxmMotSetUserMotionUsage(long lAxisNo, DWORD dwUsage);
	// Set Load/UnLoad Position to Automatically move use MPGP Input 
	DWORD    __stdcall  AxmMotSetUserPosMotion(long lAxisNo, double dVelocity, double dAccel, double dDecel, double dLoadPos, double dUnLoadPos, DWORD dwFilter, DWORD dwDelay);
	
	// Set Usage Load/UnLoad Position to Automatically move use MPGP Input 
	// Setting value :  0(DISABLE), 1(Position function A), 2(Position function B)
	DWORD    __stdcall  AxmMotSetUserPosMotionUsage(long lAxisNo, DWORD dwUsage);
	//======================================================================================================== 

	//======== SIO-CN2CH, Only for absolute position trigger module(B0) =======================================
	DWORD  __stdcall AxcKeWriteRamDataAddr(long lChannelNo, DWORD dwAddr, DWORD dwData);
	DWORD  __stdcall AxcKeReadRamDataAddr(long lChannelNo, DWORD dwAddr, DWORD* dwpData);
	DWORD  __stdcall AxcKeResetRamDataAll(long lModuleNo, DWORD dwData);
	DWORD  __stdcall AxcTriggerSetTimeout(long lChannelNo, DWORD dwTimeout);
	DWORD  __stdcall AxcTriggerGetTimeout(long lChannelNo, DWORD* dwpTimeout);
	DWORD  __stdcall AxcStatusGetWaitState(long lChannelNo, DWORD* dwpState);
	DWORD  __stdcall AxcStatusSetWaitState(long lChannelNo, DWORD dwState);
	//======================================================================================================== 

	//======== Only for PCI-N804/N404, Sequence Motion ===========================================================
	// Set Axis Information of sequence Motion (min 1axis)
	// lSeqMapNo : Sequence Motion Index Point
	// lSeqMapSize : Number of axis
	// long* LSeqAxesNo : Number of arrary
	DWORD   __stdcall AxmSeqSetAxisMap(long lSeqMapNo, long lSeqMapSize, long* lSeqAxesNo);
	DWORD   __stdcall AxmSeqGetAxisMap(long lSeqMapNo, long* lSeqMapSize, long* lSeqAxesNo);
	// Set Standard(Master)Axis of Sequence Motion.
	// By all means Set in AxmSeqSetAxisMap setting axis.
	DWORD   __stdcall AxmSeqSetMasterAxisNo(long lSeqMapNo, long lMasterAxisNo);
	// Notifies the library node start loading of Sequence Motion.
	DWORD   __stdcall AxmSeqBeginNode(long lSeqMapNo);
	// Notifies the library node end loading of Sequence Motion.
	DWORD   __stdcall AxmSeqEndNode(long lSeqMapNo);
	// Start Sequence Motion Move.
	DWORD   __stdcall AxmSeqStart(long lSeqMapNo, DWORD dwStartOption);
	// Set each profile node Information of Sequence Motion in Library.
	// if used 1axis Sequence Motion, Must be Set *dPosition one Array.
	DWORD   __stdcall AxmSeqAddNode(long lSeqMapNo, double* dPosition, double dVelocity, double dAcceleration, double dDeceleration, double dNextVelocity);
	// Return Node Index number of Sequence Motion.
	DWORD   __stdcall AxmSeqGetNodeNum(long lSeqMapNo, long* lCurNodeNo);
	// Return All node count of Sequence Motion.
	DWORD   __stdcall AxmSeqGetTotalNodeNum(long lSeqMapNo, long* lTotalNodeCnt);
	// Return Sequence Motion drive status  of specific SeqMap.
	// dwInMotion : 0(Drive end), 1(In drive)
	DWORD   __stdcall AxmSeqIsMotion(long lSeqMapNo, DWORD* dwInMotion);
	// Clear Sequence Motion Memory.
	DWORD   __stdcall AxmSeqWriteClear(long lSeqMapNo);
	// Stop sequence motion
	// dwStopMode : 0(EMERGENCY_STOP), 1(SLOWDOWN_STOP) 
	DWORD   __stdcall AxmSeqStop(long lSeqMapNo, DWORD dwStopMode);